--- a/medsis/templates/template_login/login.html
+++ b/medsis/templates/template_login/login.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base_login.html' %}
+{% block title %}Login{% endblock %}
+{% block body %}
+    <div class="col-md-4 col-md-offset-4">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Digite o Usuario e Senha</h3>
+            </div>
+            <div class="panel-body">
+                <form action="{% url 'login_uso' %}" method="post">
+                    {% csrf_token %}
+                    <fieldset>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Usuario" name="username" type="text" autofocus>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Senha" name="password" type="password" value="">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                            </label>
+                        </div>
+                        <!-- Change this to a button or input when using this as a form -->
+                        <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
+
+{% endblock body %}
+{% block scripts %}
+    <script>
+
+
+    </script>
+{% endblock scripts %}
