--- a/medsis/templates/agentes/agente_form.html
+++ b/medsis/templates/agentes/agente_form.html
@@ -1,11 +1,9 @@
-{% extends 'base.html' %}
-{% block title %}Pacientes{% endblock %}
-{% block body %}
+{% load widget_tweaks %}
+
+<form method="post" action="{% url 'criar_agente' %}" class="js-book-create-agente">
+    {% csrf_token %}
     <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Criar Novo Agente</h1>
-        </div>
-        <div class="col-sm-12 box-buscas">
+        <div class="col-sm-12">
             <div class="col-lg-6">
                 {% if messages %}
                     {% for message in messages %}
@@ -17,76 +15,23 @@
                         </div>
                     {% endfor %}
                 {% endif %}
-
             </div>
-
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Agente
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <form method="post">
-                        {% csrf_token %}
-
-                        <div class="modal-body">
-                            <div class="row">
-                                <div class="form-group col-sm-7 col-md-6 {% if form.nome.errors %} has-error{% endif %}">
-                                    <label class="form-control-label" for="{{ form.nome.id_for_label }}">Nome:</label>
-                                    <div class="form-group">
-                                        {{ form.nome }}
-
-                                    </div>
-                                    <small class="invalid-feedback">
-                                        {{ form.nome.errors }}
-                                    </small>
-                                </div>
-                                <div class="form-group col-sm-4 col-md-3 {% if form.rg.errors %} has-error has-feedback{% endif %}">
-                                    <label class="control-label" for="{{ form.rg.id_for_label }}">RG:</label>
-                                    <div class="form-group">
-                                        {{ form.rg }}
-
-                                    </div>
-                                    <small class="help-block">
-                                        {{ form.rg.errors }}
-                                    </small>
-                                </div>
-
-                            </div>
-                            <div class="modal-footer">
-                                {% with url_name=request.resolver_match.url_name %}
-                                {% if url_name == 'criar_agente' %}
-                                    <button type="submit" class="btn btn-success small">SALVAR</button>
-                                {% elif url_name == 'edit_agente' %}
-                                    <button type="submit" class="btn btn-warning small">EDITAR</button>
-                                {% endif %}
-                            {% endwith %}
-                                <a href="{% url 'agentes' %}" class="btn btn-default">Sair</a>
-
-                            </div>
-                    </form>
-                </div>
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
-        </div>
-        <!-- /.col-lg-12 -->
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Cadastrar Agente</h4>
     </div>
-    <!-- ----------------------------------------------- -->
-
-
-
-
-{% endblock body %}
-{% block scripts %}
-    <script>
-
-
-    </script>
-{% endblock scripts %}
+    <div class="modal-body">
+        <div class="row">
+            {% include 'agentes/form-parte.html' %}
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="submit" class="btn btn-success small">Salvar</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Sair</button>
+    </div>
+    <!-- /.col-lg-12 -->
+</form>
