--- a/medsis/templates/agentes/form-parte.html
+++ b/medsis/templates/agentes/form-parte.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="form-group col-sm-7 col-md-6 {% if form.nome.errors %} has-error{% endif %}">
+    <label class="form-control-label" for="{{ form.nome.id_for_label }}">Nome:</label>
+    <div class="form-group">
+        {{ form.nome }}
+    </div>
+    <small class="invalid-feedback">
+        {{ form.nome.errors }}
+    </small>
+</div>
+<div class="form-group col-sm-4 col-md-3 {% if form.rg.errors %} has-error has-feedback{% endif %}">
+    <label class="control-label" for="{{ form.rg.id_for_label }}">RG:</label>
+    <div class="form-group">
+        {{ form.rg }}
+    </div>
+    <small class="help-block">
+        {{ form.rg.errors }}
+    </small>
+</div>
