--- a/medsis/templates/template_login/cadastro.html
+++ b/medsis/templates/template_login/cadastro.html
@@ -1,10 +1,138 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Pacientes{% endblock %}
+{% block body %}
+    <div class="row" xmlns="http://www.w3.org/1999/html">
+        <div class="col-lg-12">
+            <h1 class="page-header">Criar Novo Usuario</h1>
+        </div>
+        <div class="col-sm-12 box-buscas">
+            <div class="col-lg-6">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert {{ message.tags }} alert-dismissible text-center" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
+                            <strong>{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error{% else %}
+                                {{ message.tags|title }}{% endif %}!</strong> {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+
+            </div>
+
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Usuario
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="form-group col-sm-8 col-md-7 {% if form.first_name.errors %} has-error{% endif %}">
+                                <label class="form-control-label" for="{{ form.first_name.id_for_label }}">Nome:</label>
+                                <div class="form-group">
+                                    {{ form.first_name }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.first_name.errors }}
+                                </small>
+                            </div>
+                            <div class="form-group col-sm-7 col-md-6 {% if form.last_name.errors %} has-error{% endif %}">
+                                <label class="form-control-label" for="{{ form.last_name.id_for_label }}">Ultimo
+                                    Nome:</label>
+                                <div class="form-group">
+                                    {{ form.last_name }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.last_name.errors }}
+                                </small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-8 col-md-7 {% if form.email.errors %} has-error{% endif %}">
+                                <label class="form-control-label" for="{{ form.email.id_for_label }}">Email:</label>
+                                <div class="form-group">
+                                    {{ form.email }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.email.errors }}
+                                </small>
+                            </div>
+                            <div class="form-group col-sm-7 col-md-6 {% if form.username.errors %} has-error{% endif %}">
+                                <label class="form-control-label"
+                                       for="{{ form.username.id_for_label }}">Usuario:</label>
+                                <div class="form-group">
+                                    {{ form.username }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.username.errors }}
+                                </small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-7 col-md-6 {% if form.password1.errors %} has-error{% endif %}">
+                                <label class="form-control-label" for="{{ form.password1.id_for_label }}">Senha:</label>
+                                <div class="form-group">
+                                    {{ form.password1 }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.password1.errors }}
+                                </small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-7 col-md-6 {% if form.password2.errors %} has-error{% endif %}">
+                                <label class="form-control-label" for="{{ form.password2.id_for_label }}">Confirme
+                                    Senha:</label>
+                                <div class="form-group">
+                                    {{ form.password2 }}
+
+                                </div>
+                                <small class="invalid-feedback">
+                                    {{ form.password2.errors }}
+                                </small>
+                            </div>
+                        </div>
+                        <div class="row">
+
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-success small">SALVAR</button>
+
+                            </div>
+                        </div>
+
+                    </form>
+
+
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- ----------------------------------------------- -->
+
+
+
+
+{% endblock body %}
+{% block scripts %}
+    <script>
+
+
+    </script>
+{% endblock scripts %}
