--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,8 @@
     <![endif]-->
 
 </head>
-
 <body>
-
 <div id="wrapper">
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
@@ -53,9 +50,7 @@
             <a class="navbar-brand" href="{% url 'index' %}">RS 1.0</a>
         </div>
         <!-- /.navbar-header -->
-
         <ul class="nav navbar-top-links navbar-right">
-
             <li>{{ request.user }}</li>
             <!-- /.dropdown -->
             <li class="dropdown">
@@ -76,7 +71,6 @@
             <!-- /.dropdown -->
         </ul>
         <!-- /.navbar-top-links -->
-
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
@@ -100,9 +94,6 @@
                             <li>
                                 <a href="{% url 'agentes' %}">Lista Agentes</a>
                             </li>
-                            <li>
-                                <a href="{% url 'criar_agente' %}">Novo Agente</a>
-                            </li>
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
@@ -118,37 +109,30 @@
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
-
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
         </div>
         <!-- /.navbar-static-side -->
     </nav>
-
     <div id="page-wrapper">
         {% block body %}
             <h1>{{ page.title }}</h1>
         {% endblock body %}
-
     </div>
     <!-- /#page-wrapper -->
-
 </div>
 <!-- /#wrapper -->
-
 <!-- jQuery -->
 <script src="{% static "js/jquery.min.js" %}"></script>
-
 <!-- Bootstrap Core JavaScript -->
 <script src="{% static "js/bootstrap.min.js" %}"></script>
-
 <!-- Metis Menu Plugin JavaScript -->
 <script src="{% static "js/metisMenu.min.js" %}"></script>
-
 <!-- Custom Theme JavaScript -->
 <script src="{% static "js/sb-admin-2.js" %}"></script>
 <script src="{% static "js/Chart.bundle.min.js" %}"></script>
+<script src="{% static "js/bootbox.min.js" %}"></script>
 <!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
@@ -157,7 +141,5 @@
 <script src="{% static "js/scripts.js" %}"></script>
 {% block scripts %}
 {% endblock scripts %}
-
 </body>
-
 </html>
