--- a/medsis/templates/agentes/agente_form.html
+++ b/medsis/templates/agentes/agente_form.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
 
-<form method="post" action="{% url 'criar_agente' %}" class="js-book-create-agente">
+<form method="post" action="{% url 'criar_agente' %}" class="create-agente">
     {% csrf_token %}
     <div class="row">
         <div class="col-sm-12">
@@ -20,7 +20,7 @@
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
-    <div class="modal-header">
+    <div class="modal-header alert alert-info">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Cadastrar Agente</h4>
     </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="submit" class="btn btn-success small">Salvar</button>
+        <button type="submit" class="btn btn-primary small">Salvar</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Sair</button>
     </div>
     <!-- /.col-lg-12 -->
